javadoc updated minor changes to DefaultContext.cast